@@ -1,5 +1,2 @@
 JDK : Java 11;
-set Virtual machine :
-Run->edit configuration->Vm options :--module-path "D:\dictionary\javafx_lib\lib" --add-modules javafx.controls,javafx.fxml(Window);
---module-path path/javafx_lib/lib --add-modules javafx.controls,javafx.fxml
 Java tool : JavaFx,Screen builder
